2014-04-17  Sihai Yao  <sihai.ysh@alibaba-inc.com>

	* sysdeps/x86_64/multiarch/ifunc-defines.sym (COMMON_CPUID_INDEX_7):
	New.
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Check and set bit_AVX2_Usable.
	* sysdeps/x86_64/multiarch/init-arch.h (bit_AVX2_Usable): New
	macro.
	(bit_AVX2): Likewise.
	(index_AVX2_Usable): Likewise.
	(CPUID_AVX2): Likewise.
	(HAS_AVX2): Likewise.

2014-04-17  Will Newton  <will.newton@linaro.org>

	* manual/setjmp.texi (System V contexts): Add note that
	calling setcontext on a context created by a call to a
	signal handler is undefined.  Update text to note that
	setcontext from a signal handler is possible but not
	recommended.

	[BZ #16629]
	* stdlib/tst-setcontext.c: Include signal.h.
	(main): Check that the signal stack before and
	after swapcontext is the same.

	* sysdeps/unix/sysv/linux/aarch64/setcontext.S (__setcontext):
	Re-implement to restore registers in user code and avoid
	rt_sigreturn system call.

2014-04-17  Wilco  <wdijkstr@arm.com>

	* sysdeps/arm/math-tests.h: New file: Set ARM math-test settings.
	* sysdeps/generic/math-tests.h: Add macro (EXCEPTION_ENABLE_SUPPORTED).
	* math/test-fenv.c: Skip exception trap tests on targets which only
	support non-stop mode.

2014-04-17  Ian Bolton  <ian.bolton@arm.com>
	    Wilco Dijkstra  <wilco.dijkstra@arm.com>

	* sysdeps/aarch64/fpu/math_private.h (HAVE_RM_CTX)
	(libc_feholdsetround_aarch64_ctx)
	(libc_feholdsetround_ctx, libc_feholdsetroundf_ctx)
	(libc_feholdsetroundl_ctx, libc_feresetround_aarch64_ctx)
	(libc_feresetround_ctx, libc_feresetroundf_ctx)
	(libc_feresetroundl_ctx, libc_feresetround_noex_aarch64_ctx)
	(libc_feresetround_noex_ctx, libc_feresetround_noexf_ctx)
	(libc_feresetround_noexl_ctx): Define.

2014-04-16  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/nptl/pthread_once.c: Remove.

	* sysdeps/alpha/Makefile [debug] (CFLAGS-backtrace.c): Enable
	unwind tables.
